# macy

./: .gitignore  Acoustic_dataset.xlsx  README.md  activate.sh  complete_data.csv  demo.ipynb  enhanced_suicide_prediction.py  github_setup.sh  pyproject.toml  quick_setup.sh  requirements_ml.txt  run_model.sh  run_models.sh  setup.sh  suicide_risk_analysis_report.json  suicide_risk_prediction.py
BERT_LR/: BERT_LR.py
BERT_RF.py/: BERT_RF.py  EMA_Dataset.xlsx  features_linguistic_cleaned.csv
BERT_SVM.py/: BERT_SVM.py
trial/: trial.py
