[project]
name = "macy-ml-project"
version = "0.1.0"
description = "BERT-based machine learning models for text classification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.20.0", 
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]

[tool.setuptools]
py-modules = []  # No modules to install as package, just dependencies

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
